# ChatBye_Beta

./: CMakeLists.txt  CMakeLists.txt.user.e7efdea  README.md  main.cpp
android/: AndroidManifest.xml
client/: app_controller.cpp  app_controller.h  main_window.cpp  main_window.h
client/core/: discovery_manager.cpp  discovery_manager.h  host_info.cpp  host_info.h  message_handler.cpp  message_handler.h  network_manager.cpp  network_manager.h  server_launcher.cpp  server_launcher.h
client/pages/: chat_page.cpp  chat_page.h  name_page.cpp  name_page.h  page_base.cpp  page_base.h  port_page.cpp  port_page.h
client/pages/image_settings/: image_settings_manager.cpp  image_settings_manager.h
client/pages/message_manager/: message_manager.cpp  message_manager.h
client/pages/settings_page/: settings_page.cpp  settings_page.h
client/resources/: resources.qrc
client/ui/custom_widgets/: chat_list_widget.cpp  chat_list_widget.h  color_selector.cpp  color_selector.h  custom_widget_base.cpp  custom_widget_base.h  font_picker.cpp  font_picker.h  progress_dialog.h  progressdialog.cpp
client/ui/helpers/: message_helper.cpp  message_helper.h  shadow_helper.cpp  shadow_helper.h
client/ui/styles/: chat_page_style.cpp  chat_page_style.h  name_page_style.cpp  name_page_style.h  port_page_style.cpp  port_page_style.h  style_manager.cpp  style_manager.h
helpers/dictionary/: server_message_dictionary.cpp  server_message_dictionary.h
helpers/json/: json_message_builder.cpp  json_message_builder.h
helpers/message_enum/: host_binding_mode.cpp  host_binding_mode.h  hostmode.h  interface_filter.h  message_source.cpp  message_source.h  message_type.cpp  message_type.h  scan_mode.h
server/: server.cpp  server.h  server_controller.cpp  server_controller.h
server/core/: client_manager.cpp  client_manager.h  message_dispatcher.cpp  message_dispatcher.h  tcp_sender.cpp  tcp_sender.h  udp_service.cpp  udp_service.h
